refactor: 테스트 코드 수정 및 로직 개선