@@ -1,5 +1,7 @@
 package routie.routie.service;
 
+import java.util.Comparator;
+import java.util.concurrent.CyclicBarrier;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -12,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
 import routie.exception.BusinessException;
 import routie.place.domain.Place;
+import routie.place.domain.PlaceBuilder;
 import routie.place.repository.PlaceRepository;
 import routie.routie.controller.dto.request.RoutiePlaceCreateRequest;
 import routie.routie.controller.dto.request.RoutieUpdateRequest;
@@ -19,6 +22,7 @@ import routie.routie.controller.dto.request.RoutieUpdateRequest.RoutiePlaceReque
 import routie.routie.domain.RoutiePlace;
 import routie.routie.repository.RoutiePlaceRepository;
 import routie.routiespace.domain.RoutieSpace;
+import routie.routiespace.domain.RoutieSpaceFixture;
 import routie.routiespace.repository.RoutieSpaceRepository;
 
 import java.time.DayOfWeek;
@@ -59,69 +63,60 @@ class RoutieServiceTest {
 
     @BeforeEach
     void setUp() {
-        // 기존 데이터 정리
-        transactionTemplate.execute(status -> {
-            routiePlaceRepository.deleteAll();
-            placeRepository.deleteAll();
-            routieSpaceRepository.deleteAll();
-            return null;
-        });
+        routiePlaceRepository.deleteAll();
+        placeRepository.deleteAll();
+        routieSpaceRepository.deleteAll();
 
-        // 테스트용 데이터 생성
-        transactionTemplate.execute(status -> {
-            // 테스트용 루티 스페이스 생성
-            testRoutieSpace = RoutieSpace.from(() -> "test-routie-space-" + System.currentTimeMillis());
-            routieSpaceRepository.save(testRoutieSpace);
+        testRoutieSpace = RoutieSpaceFixture.createEmpty();
 
-            // 테스트용 장소들 생성
-            testPlace1 = Place.create(
-                    "카페 A",
-                    "서울시 강남구 테헤란로 123",
-                    "서울시 강남구 역삼동 123-45",
-                    127.027926,
-                    37.497175,
-                    60,
-                    LocalTime.of(9, 0),
-                    LocalTime.of(22, 0),
-                    null,
-                    null,
-                    testRoutieSpace,
-                    List.of(DayOfWeek.SUNDAY)
-            );
+        testPlace1 = new PlaceBuilder()
+                .name("카페 A")
+                .roadAddressName("서울시 강남구 테헤란로 123")
+                .addressName("서울시 강남구 역삼동 123-45")
+                .longitude(127.027926)
+                .latitude(37.497175)
+                .stayDurationMinutes(60)
+                .openAt(LocalTime.of(9, 0))
+                .closeAt(LocalTime.of(22, 0))
+                .breakStartAt(null)
+                .breakEndAt(null)
+                .routieSpace(testRoutieSpace)
+                .placeClosedDayOfWeeksByDayOfWeeks(List.of(DayOfWeek.SUNDAY))
+                .build();
 
-            testPlace2 = Place.create(
-                    "레스토랑 B",
-                    "서울시 강남구 테헤란로 456",
-                    "서울시 강남구 역삼동 456-78",
-                    127.028926,
-                    37.498175,
-                    90,
-                    LocalTime.of(11, 0),
-                    LocalTime.of(23, 0),
-                    LocalTime.of(15, 0),
-                    LocalTime.of(17, 0),
-                    testRoutieSpace,
-                    List.of()
-            );
+        testPlace2 = new PlaceBuilder()
+                .name("레스토랑 B")
+                .roadAddressName("서울시 강남구 테헤란로 456")
+                .addressName("서울시 강남구 역삼동 456-78")
+                .longitude(127.028926)
+                .latitude(37.498175)
+                .stayDurationMinutes(90)
+                .openAt(LocalTime.of(11, 0))
+                .closeAt(LocalTime.of(23, 0))
+                .breakStartAt(LocalTime.of(15, 0))
+                .breakEndAt(LocalTime.of(17, 0))
+                .routieSpace(testRoutieSpace)
+                .placeClosedDayOfWeeks(List.of())
+                .build();
 
-            testPlace3 = Place.create(
-                    "쇼핑몰 C",
-                    "서울시 강남구 테헤란로 789",
-                    "서울시 강남구 역삼동 789-12",
-                    127.029926,
-                    37.499175,
-                    120,
-                    LocalTime.of(10, 0),
-                    LocalTime.of(22, 0),
-                    null,
-                    null,
-                    testRoutieSpace,
-                    List.of(DayOfWeek.MONDAY)
-            );
+        testPlace3 = new PlaceBuilder()
+                .name("쇼핑몰 C")
+                .roadAddressName("서울시 강남구 테헤란로 789")
+                .addressName("서울시 강남구 역삼동 789-12")
+                .longitude(127.029926)
+                .latitude(37.499175)
+                .stayDurationMinutes(120)
+                .openAt(LocalTime.of(10, 0))
+                .closeAt(LocalTime.of(22, 0))
+                .breakStartAt(null)
+                .breakEndAt(null)
+                .routieSpace(testRoutieSpace)
+                .placeClosedDayOfWeeksByDayOfWeeks(List.of(DayOfWeek.MONDAY))
+                .build();
 
-            placeRepository.saveAll(List.of(testPlace1, testPlace2, testPlace3));
-            return null;
-        });
+        testRoutieSpace.getPlaces().addAll(List.of(testPlace1, testPlace2, testPlace3));
+
+        routieSpaceRepository.save(testRoutieSpace);
     }
 
     @Test
@@ -135,11 +130,13 @@ class RoutieServiceTest {
         CountDownLatch latch = new CountDownLatch(threadCount);
         AtomicInteger successCount = new AtomicInteger(0);
 
+        CyclicBarrier barrier = new CyclicBarrier(threadCount);
         try (ExecutorService executorService = Executors.newFixedThreadPool(threadCount)) {
             // When
             for (int i = 0; i < threadCount; i++) {
                 executorService.submit(() -> {
                     try {
+                        barrier.await();
                         transactionTemplate.execute(status -> {
                             routieService.addRoutiePlace(routieSpaceIdentifier, request);
                             return null;
@@ -168,33 +165,30 @@ class RoutieServiceTest {
     @DisplayName("루티 순서 수정 테스트 - 순서 변경")
     @Transactional
     void testModifyRoutieOrder() {
-        // Given - 초기 루티 설정
+        // Given
         String routieSpaceIdentifier = testRoutieSpace.getIdentifier();
 
-        // 초기 루티에 장소들 추가
         routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace1.getId()));
         routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace2.getId()));
         routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace3.getId()));
 
-        // 초기 상태 확인
         List<RoutiePlace> initialPlaces = routiePlaceRepository.findAll();
         assertThat(initialPlaces).hasSize(3);
 
-        // When - 순서 변경 (1,2,3 -> 3,1,2)
+        // When
         RoutieUpdateRequest updateRequest = new RoutieUpdateRequest(List.of(
-                new RoutiePlaceRequest(testPlace3.getId(), 1), // 쇼핑몰 C가 3번째에서 1번째로
-                new RoutiePlaceRequest(testPlace1.getId(), 2), // 카페 A가 1번째에서 2번째로
-                new RoutiePlaceRequest(testPlace2.getId(), 3)  // 레스토랑 B가 2번째에서 3번째로
+                new RoutiePlaceRequest(testPlace3.getId(), 1),
+                new RoutiePlaceRequest(testPlace1.getId(), 2),
+                new RoutiePlaceRequest(testPlace2.getId(), 3)
         ));
 
         routieService.modifyRoutie(routieSpaceIdentifier, updateRequest);
 
-        // Then - 순서가 올바르게 변경되었는지 확인
+        // Then
         List<RoutiePlace> updatedPlaces = routiePlaceRepository.findAll();
-        assertThat(updatedPlaces).hasSize(3);
+        updatedPlaces.sort(Comparator.comparingInt(RoutiePlace::getSequence));
 
-        // 시퀀스별로 정렬하여 확인
-        updatedPlaces.sort((a, b) -> Integer.compare(a.getSequence(), b.getSequence()));
+        assertThat(updatedPlaces).hasSize(3);
 
         assertThat(updatedPlaces.get(0).getPlace().getId()).isEqualTo(testPlace3.getId());
         assertThat(updatedPlaces.get(0).getSequence()).isEqualTo(1);
@@ -210,23 +204,53 @@ class RoutieServiceTest {
     @DisplayName("루티 수정 테스트 - 전체 교체")
     @Transactional
     void testModifyRoutieCompleteReplacement() {
-        // Given - 초기 루티 설정
+        // Given
         String routieSpaceIdentifier = testRoutieSpace.getIdentifier();
 
         routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace1.getId()));
         routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace2.getId()));
 
-        // When - 완전히 다른 장소들로 교체
+        // When
         RoutieUpdateRequest updateRequest = new RoutieUpdateRequest(List.of(
-                new RoutiePlaceRequest(testPlace3.getId(), 1) // 완전히 새로운 구성
+                new RoutiePlaceRequest(testPlace3.getId(), 1)
         ));
 
         routieService.modifyRoutie(routieSpaceIdentifier, updateRequest);
 
-        // Then - 새로운 구성으로 교체되었는지 확인
+        // Then
         List<RoutiePlace> updatedPlaces = routiePlaceRepository.findAll();
         assertThat(updatedPlaces).hasSize(1);
-        assertThat(updatedPlaces.get(0).getPlace().getId()).isEqualTo(testPlace3.getId());
-        assertThat(updatedPlaces.get(0).getSequence()).isEqualTo(1);
+        assertThat(updatedPlaces.getFirst().getPlace().getId()).isEqualTo(testPlace3.getId());
+        assertThat(updatedPlaces.getFirst().getSequence()).isEqualTo(1);
+    }
+
+    @Test
+    @DisplayName("루티 수정 시 DELETE 성공 후 INSERT 실패 시 롤백 테스트")
+    void testModifyRoutieRollbackOnFailure() {
+        // Given
+        String routieSpaceIdentifier = testRoutieSpace.getIdentifier();
+
+        routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace1.getId()));
+        routieService.addRoutiePlace(routieSpaceIdentifier, new RoutiePlaceCreateRequest(testPlace2.getId()));
+
+        List<RoutiePlace> initialPlaces = routiePlaceRepository.findAll();
+        assertThat(initialPlaces).hasSize(2);
+
+        // When
+        RoutieUpdateRequest invalidRequest = new RoutieUpdateRequest(List.of(
+                new RoutiePlaceRequest(testPlace1.getId(), 1),
+                new RoutiePlaceRequest(99999L, 2)
+        ));
+
+        // Then
+        assertThatThrownBy(() -> routieService.modifyRoutie(routieSpaceIdentifier, invalidRequest))
+                .isInstanceOf(BusinessException.class);
+
+        List<RoutiePlace> afterFailurePlaces = routiePlaceRepository.findAll();
+        assertThat(afterFailurePlaces).hasSize(2);
+
+        afterFailurePlaces.sort(Comparator.comparingInt(RoutiePlace::getSequence));
+        assertThat(afterFailurePlaces.get(0).getPlace().getId()).isEqualTo(testPlace1.getId());
+        assertThat(afterFailurePlaces.get(1).getPlace().getId()).isEqualTo(testPlace2.getId());
     }
 }
